# zkinterface-wasm

./: .gitignore  .travis.yml  LICENSE_MIT  Makefile  README.md
ci/: Makefile  cargo_check.sh  script.sh
demo/: index.html  package-lock.json  package.json  webpack.config.js
demo/scripts/: index.js
demo/styles/: index.css
docs/: 0.bootstrap.js  0.start.js  bootstrap.js  index.css  index.html  package-lock.json  package.json  start.js
www/: index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
zkif-wasm-bulletproofs/: Cargo.toml
zkif-wasm-bulletproofs/src/: backend_bulletproofs.rs  lib.rs
zkif-wasm-bundles/zkif-wasm-bulletproofs/: Cargo.toml
zkif-wasm-bundles/zkif-wasm-bulletproofs/src/: backend_bulletproofs.rs  lib.rs
zkif-wasm-bundles/zkif-wasm-example/src/: frontend.rs  lib.rs
zkif-wasm-bundles/zkif-wasm-zokrates/: Cargo.toml
zkif-wasm-bundles/zkif-wasm-zokrates/src/: frontend.rs  lib.rs
zkif-wasm-example/: Cargo.toml
zkif-wasm-zokrates/: Cargo.toml
zkif-wasm-zokrates/src/: frontend.rs
