[package]
name = "zkif-wasm-zokrates"
version = "0.1.0"
description = "ZoKrates frontend through zkInterface and WebAssembly"
repository = "https://github.com/QED-it/zkinterface-wasm"
homepage = "https://github.com/QED-it/zkinterface"
license = "MIT"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
edition = "2018"

[features]
#default = ["console_error_panic_hook"]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = {version="0.2", features = ["serde-serialize"]}
serde = "^1.0.92"
serde_derive = "^1.0.92"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

zkinterface = "1.0.4"
zokrates_core = { git = "https://github.com/QED-it/ZoKrates", branch = "zkinterface" }
zokrates_field = { git = "https://github.com/QED-it/ZoKrates", branch = "zkinterface" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true

#[patch.crates-io]
#zkinterface = { path = "../../zkinterface/rust" }
